# unity_webgpu_pathtracer

./: .gitignore  README.md
Assets/: Blue.mat  Disney.mat  Disney.shader  Green.mat  Light.mat  White.mat  Yellow.mat
Assets/Examples/Materials/: AlphaTexture.mat  Amber.mat  Blue.mat  Checker.mat  DisneyBRDF.mat  DisneyGlass.mat  Green.mat  GreenGloss.mat  PTGlass.mat  Pink.mat  Textured.mat  Textured2.mat  Textured3.mat
Assets/Examples/Scenes/: BRDFShader.unity  BasicScene.unity  CameraAperture.unity  CornellBox.unity  DisneyBRDF.unity  Dragon.unity  Helmet.unity  Hyperion_rect_lights.unity  Lights.unity  Quad.unity  Sponza.unity  Sponza_test.unity  SportsCar.unity  SportsCar2.unity  TLAS.unity  Table.unity  Teapot.unity  Texture.unity  instances.unity
Assets/Examples/Scripts/: Bounce.cs  DisneyBRDFTest.cs  FreeViewCamera.cs
Assets/Materials/: Blue.mat  Bumpy.mat  DisneyBRDF.mat  Glass.mat  Light.mat  Mirror.mat  Textured.mat  White.mat
Assets/Plugins/OSX/: libunity-webgpu-pathtracer-plugin.bundle  libunity-webgpu-pathtracer-plugin.dylib
Assets/Plugins/Web/: plugin.cpp  plugin.h  tiny_bvh.h
Assets/Plugins/Windows/: unity-webgpu-pathtracer-plugin.lib
Assets/Resources/: Common.cginc  CopyTextureData.compute  MeshProcessing.compute  PathTracer.compute  PathTracer_Extend.compute  PathTracer_Generate.compute  Presentation.shader  RayIntersection.compute  UnityGLTFSettings.asset
Assets/Scenes/: BasicScene.unity  Buddha.unity  CornellBox.unity  DisneyMaterial.unity  Simple.unity  Sponza.unity  helmet.unity  teapot.unity
Assets/Scripts/: BVH.cs  BVHScene.cs  FreeViewCamera.cs  PathTracer.cs  Raytracer.cs  Utilities.cs
Assets/Scripts/util/: BVH.cs  (+4 more)
Assets/Shaders/: DisneyBRDF.shader  DisneyBRDFGUI.cs
Plugin/: CMakeLists.txt  README.md  build.bat  build.sh  premake5.lua
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
(+51 files in other folders)
